tests/baselines/reference/invalidImportAliasIdentifiers.errors.txt
tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts(5,12): error TS2503: Cannot find namespace 'V'.
tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts(11,12): error TS2503: Cannot find namespace 'C'.
tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts(17,12): error TS2503: Cannot find namespace 'E'.
tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts(23,12): error TS2503: Cannot find namespace 'I'.


==== tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts (4 errors) ====
    // none of these should work, since non are actually modules
    
    var V = 12;
    
    import v = V;
               ~
!!! error TS2503: Cannot find namespace 'V'.
    
    class C {
        name: string;
    }
    
    import c = C;
               ~
!!! error TS2503: Cannot find namespace 'C'.
    
    enum E {
        Red, Blue
    }
    
    import e = E;
               ~
!!! error TS2503: Cannot find namespace 'E'.
    
    interface I {
        id: number;
    }
    
    import i = I;
               ~
!!! error TS2503: Cannot find namespace 'I'.
    